--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="image/favicon.ico">
     <link href="assets/bootstrap@5.0.0-beta1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/index.css?ver=0.9.3">
+    <link rel="stylesheet" href="assets/index.css?ver=0.10.0">
     <script src="assets/bootstrap@5.0.0-beta1.bundle.min.js"></script>
     <script src="assets/howler_2_2_1.min.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
@@ -124,26 +124,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <label for="addition-difficulty" class="text-light">難易度</label>
-                        <input type="hidden" id="addition-difficulty" value="normal">
-                        <ul class="nav nav-pills nav-fill">
-                            <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="pill" href="" role="tab"
-                                   onclick="changeAdditionDifficulty(additionDifficultyMap.easy)">かんたん</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" data-bs-toggle="pill" href="" role="tab"
-                                   onclick="changeAdditionDifficulty(additionDifficultyMap.normal)">ふつう</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="pill" href="" role="tab"
-                                   onclick="changeAdditionDifficulty(additionDifficultyMap.hard)">むずかしい</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <div class="tab-pane fade w-auto" id="multiplication-mode-config" role="tabpanel"
                  aria-labelledby="nav-contact-tab">
@@ -186,6 +166,26 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <label for="difficulty" class="text-light">難易度</label>
+                <input type="hidden" id="difficulty" value="">
+                <ul class="nav nav-pills nav-fill">
+                    <li class="nav-item">
+                        <a id="difficulty-easy" class="nav-link" data-bs-toggle="pill" href="" role="tab"
+                           onclick="changeAdditionDifficulty(difficultyMap.easy)">かんたん</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="difficulty-normal" class="nav-link" data-bs-toggle="pill" href="" role="tab"
+                           onclick="changeAdditionDifficulty(difficultyMap.normal)">ふつう</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="difficulty-hard" class="nav-link" data-bs-toggle="pill" href="" role="tab"
+                           onclick="changeAdditionDifficulty(difficultyMap.hard)">むずかしい</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -573,6 +573,27 @@
                                             </tr>
                                             </tbody>
                                         </table>
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col" colspan="2">難易度設定</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <td>かんたん</td>
+                                                <td><kbd>D</kbd></td>
+                                            </tr>
+                                            <tr>
+                                                <td>ふつう</td>
+                                                <td><kbd>F</kbd></td>
+                                            </tr>
+                                            <tr>
+                                                <td>むずかしい</td>
+                                                <td><kbd>G</kbd></td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -589,9 +610,9 @@
     </div>
 </div>
 
-<script type="text/javascript" src="lib/complexity_map.js?ver=0.9.3"></script>
-<script type="text/javascript" src="assets/globals.js?ver=0.9.3"></script>
-<script type="text/javascript" src="assets/button_events.js?ver=0.9.3"></script>
-<script type="text/javascript" src="assets/index.js?ver=0.9.3"></script>
+<script type="text/javascript" src="lib/complexity_map.js?ver=0.10.0"></script>
+<script type="text/javascript" src="assets/globals.js?ver=0.10.0"></script>
+<script type="text/javascript" src="assets/button_events.js?ver=0.10.0"></script>
+<script type="text/javascript" src="assets/index.js?ver=0.10.0"></script>
 </body>
 </html>
