--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="image/favicon.ico">
     <link href="assets/bootstrap@5.0.0-beta1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/index.css?ver=0.11.0">
+    <link rel="stylesheet" href="assets/index.css?ver=0.11.1">
     <script src="assets/bootstrap@5.0.0-beta1.bundle.min.js"></script>
     <script src="assets/howler_2_2_1.min.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
@@ -171,22 +171,13 @@
         <div class="row">
             <div class="col">
                 <label for="difficulty" class="text-light">難易度</label>
-                <input type="hidden" id="difficulty" value="">
-                <ul class="nav nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a id="difficulty-easy" class="nav-link" data-bs-toggle="pill" href="" role="tab"
-                           onclick="changeAdditionDifficulty(difficultyMap.easy)">かんたん</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="difficulty-normal" class="nav-link" data-bs-toggle="pill" href="" role="tab"
-                           onclick="changeAdditionDifficulty(difficultyMap.normal)">ふつう</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="difficulty-hard" class="nav-link" data-bs-toggle="pill" href="" role="tab"
-                           onclick="changeAdditionDifficulty(difficultyMap.hard)">むずかしい</a>
-                    </li>
-                </ul>
+                <select id="difficulty" class="form-select" aria-label="size 3 select">
+                    <option value="easy">かんたん</option>
+                    <option value="normal">ふつう</option>
+                    <option value="hard">むずかしい</option>
+                </select>
             </div>
+            <div class="col"></div>
         </div>
     </div>
     <div class="container display-none">
@@ -211,9 +202,7 @@
                         <div class="btn-group w-auto mb-2" role="group">
                             <input type="checkbox" class="btn-check" id="is-muted" autocomplete="off"
                                    onclick="toggleMute();">
-                            <label class="btn btn-outline-danger" for="is-muted" id="mute-status">
-                                <i class="bi bi-volume-up"></i><span class="ps-2">Audio On</span>
-                            </label>
+                            <label class="btn btn-outline-danger" for="is-muted" id="audio-status"></label>
                         </div>
                         <div class="input-group w-auto mb-2">
                             <div class="input-group-prepend">
@@ -222,7 +211,7 @@
                             <select name="sound-extension" id="sound-extension"
                                     onchange="setSoundExtension(this.value);"
                                     class="form-select">
-                                <option value="wav" selected>wav</option>
+                                <option value="wav">wav</option>
                                 <option value="ogg">ogg</option>
                             </select>
                         </div>
@@ -610,9 +599,9 @@
     </div>
 </div>
 
-<script type="text/javascript" src="lib/complexity_map.js?ver=0.11.0"></script>
-<script type="text/javascript" src="assets/globals.js?ver=0.11.0"></script>
-<script type="text/javascript" src="assets/button_events.js?ver=0.11.0"></script>
-<script type="text/javascript" src="assets/index.js?ver=0.11.0"></script>
+<script type="text/javascript" src="lib/complexity_map.js?ver=0.11.1"></script>
+<script type="text/javascript" src="assets/globals.js?ver=0.11.1"></script>
+<script type="text/javascript" src="assets/button_events.js?ver=0.11.1"></script>
+<script type="text/javascript" src="assets/index.js?ver=0.11.1"></script>
 </body>
 </html>
