--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Flash Anzan</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <meta name="description" content="フラッシュ暗算">
     <meta name="theme-color" content="limegreen">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="shortcut icon" href="image/favicon.ico">
+    <!--icons-->
+    <meta name="msapplication-square70x70logo" content="favicons/site-tile-70x70.png">
+    <meta name="msapplication-square150x150logo" content="favicons/site-tile-150x150.png">
+    <meta name="msapplication-wide310x150logo" content="favicons/site-tile-310x150.png">
+    <meta name="msapplication-square310x310logo" content="favicons/site-tile-310x310.png">
+    <meta name="msapplication-TileColor" content="#0078d7">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicons/favicon.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="favicons/android-chrome-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicons/android-chrome-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="favicons/android-chrome-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicons/android-chrome-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="favicons/android-chrome-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="favicons/android-chrome-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="favicons/android-chrome-152x152.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="favicons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="favicons/android-chrome-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="favicons/icon-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicons/icon-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="favicons/icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicons/icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="favicons/icon-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="favicons/icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="favicons/icon-152x152.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="favicons/icon-160x160.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="favicons/icon-196x196.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="favicons/icon-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="favicons/icon-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicons/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="24x24" href="favicons/icon-24x24.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
+    <link rel="manifest" href="favicons/manifest.json">
+    <!--css-->
     <link href="assets/bootstrap@5.0.0-beta1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/index.css?ver=0.12.0">
+    <!--js-->
     <script src="assets/bootstrap@5.0.0-beta1.bundle.min.js"></script>
     <script src="assets/howler_2_2_1.min.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
-    <link rel="manifest" href="manifest.webmanifest">
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
@@ -82,21 +126,21 @@
         <ul class="nav nav-pills mb-2" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
                 <a class="nav-link active" id="pills-addition-tab" data-bs-toggle="pill" href="#addition-mode-config"
-                   role="tab" aria-controls="pills-addition" aria-selected="true"
+                   role="tab" aria-selected="true"
                    onclick="changeMode('addition');">
                     <i class="bi bi-plus"></i><span class="ps-2">たし算</span>
                 </a>
             </li>
             <li class="nav-item" role="presentation">
                 <a class="nav-link disabled" id="pills-subtraction-tab" data-bs-toggle="pill" href="" role="tab"
-                   aria-controls="pills-subtraction" aria-selected="false" onclick="changeMode('subtraction');">
+                   aria-selected="false" onclick="changeMode('subtraction');">
                     <i class="bi bi-dash"></i><span class="ps-2">ひき算</span>
                 </a>
             </li>
             <li class="nav-item" role="presentation">
                 <a class="nav-link" id="pills-multiplication-tab" data-bs-toggle="pill"
-                   href="#multiplication-mode-config" role="tab" aria-controls="pills-multiplication"
-                   aria-selected="false" onclick="changeMode('multiplication');">
+                   href="#multiplication-mode-config" role="tab" aria-selected="false"
+                   onclick="changeMode('multiplication');">
                     <i class="bi bi-x"></i><span class="ps-2">かけ算</span>
                 </a>
             </li>
