--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
     <link rel="manifest" href="favicons/manifest.json">
     <!--css-->
-    <link href="assets/bootstrap@5.0.0-beta1.css" rel="stylesheet">
+    <link href="assets/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/index.css?ver=0.12.0">
     <!--js-->
-    <script src="assets/bootstrap@5.0.0-beta1.bundle.min.js"></script>
+    <script src="assets/bootstrap.bundle.min.js"></script>
     <script src="assets/howler_2_2_1.min.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
     <script>
