change: bootstrap を min 版に変更

--- a/src/index.html
+++ b/src/index.html
@@ -330,7 +330,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                <button type="button" class="btn btn-primary"
                         onclick="loadParams();" data-bs-toggle="modal" data-bs-target="#loadParamsCompletedModal">
                     読み込む
                 </button>
@@ -364,7 +364,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                <button type="button" class="btn btn-primary"
                         onclick="saveParams();" data-bs-toggle="modal" data-bs-target="#saveParamsCompletedModal">
                     保存する
                 </button>
@@ -398,7 +398,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                <button type="button" class="btn btn-primary"
                         onclick="deleteParams();" data-bs-toggle="modal" data-bs-target="#deleteParamsCompletedModal">
                     削除する
                 </button>
