fix: manifest.json の start_url が間違っていたので修正

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/icon-16x16.png">
     <link rel="icon" type="image/png" sizes="24x24" href="favicons/icon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
-    <link rel="manifest" href="favicons/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <!--css-->
     <link href="assets/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
