change: 出題数字履歴のモーダルをスクロール可能にする

--- a/src/index.html
+++ b/src/index.html
@@ -443,7 +443,7 @@
 </div>
 <!-- Number History -->
 <div class="modal" id="numberHistoryModal" tabindex="-1" aria-labelledby="numberHistoryModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="numberHistoryModalLabel">Number History</h5>
