fix: モーダルの表示位置を画面中央に修正

--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,7 @@
 <!-- Modal -->
 <!-- Common More Config -->
 <div class="modal" id="commonMoreConfigModal" tabindex="-1" aria-labelledby="commonMoreConfigModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="commonMoreConfigModalLabel">Config</h5>
@@ -319,7 +319,7 @@
 </div>
 <!-- Load Params -->
 <div class="modal" id="loadParamsConfirmModal" tabindex="-1" aria-labelledby="loadParamsConfirmModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="loadParamsConfirmModalLabel">Flash Anzan</h5>
@@ -339,7 +339,7 @@
     </div>
 </div>
 <div class="modal" id="loadParamsCompletedModal" tabindex="-1" aria-labelledby="loadParamsCompletedModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="loadParamsCompletedModalLabel">Flash Anzan</h5>
@@ -353,7 +353,7 @@
 </div>
 <!-- Save Params -->
 <div class="modal" id="saveParamsConfirmModal" tabindex="-1" aria-labelledby="saveParamsConfirmModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="saveParamsConfirmModalLabel">Flash Anzan</h5>
@@ -373,7 +373,7 @@
     </div>
 </div>
 <div class="modal" id="saveParamsCompletedModal" tabindex="-1" aria-labelledby="saveParamsCompletedModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="saveParamsCompletedModalLabel">Flash Anzan</h5>
@@ -387,7 +387,7 @@
 </div>
 <!-- Delete Params -->
 <div class="modal" id="deleteParamsConfirmModal" tabindex="-1" aria-labelledby="deleteParamsConfirmModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="deleteParamsConfirmModalLabel">Flash Anzan</h5>
@@ -407,7 +407,7 @@
     </div>
 </div>
 <div class="modal" id="deleteParamsCompletedModal" tabindex="-1" aria-labelledby="deleteParamsCompletedModalLabel">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="deleteParamsCompletedModalLabel">Flash Anzan</h5>
@@ -425,7 +425,7 @@
         style="display: none;"></button>
 <div class="modal" id="inputAnswerModal" tabindex="-1" aria-labelledby="inputAnswerModalLabel"
      data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog modal-xl">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="inputAnswerModalLabel">答えを入力してください</h5>
@@ -443,7 +443,7 @@
 </div>
 <!-- Number History -->
 <div class="modal" id="numberHistoryModal" tabindex="-1" aria-labelledby="numberHistoryModalLabel">
-    <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="numberHistoryModalLabel">Number History</h5>
@@ -469,7 +469,7 @@
 </div>
 <!-- Help -->
 <div class="modal" id="helpModal" tabindex="-1" aria-labelledby="helpModalLabel">
-    <div class="modal-dialog modal-xl">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="helpModalLabel">Shortcut</h5>
