--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 <div id="calculate-area" class="calculate-area" data-full-screen="0">
     <div id="header-message" class="font"></div>
     <div id="question-number-area" class="number-area abacus-font"></div>
-    <p id="question-info-label" class="display-none"></p>
+    <p id="notice-area"></p>
 </div>
 <hr class="my-2">
 <div class="operation-panel">
